--- a/Signal/translations/es.lproj/InfoPlist.strings
+++ b/Signal/translations/es.lproj/InfoPlist.strings
@@ -1,9 +1,9 @@
-NSAppleMusicUsageDescription = "Signal necesita usar Apple Music para reproducir adjuntos de audio.";
-NSCameraUsageDescription = "Signal usa tu cámara para tomar fotos o para hacer vídeollamadas.";
-NSContactsUsageDescription = "Signal usa tu lista de contactos para encontrar personas que conoces que usan Signal. No guardamos tus contactos en nuestros servidores.";
+NSAppleMusicUsageDescription = "Signal necesita usar Apple Music para reproducir los archivos multimedia adjuntos.";
+NSCameraUsageDescription = "Signal usa tu cámara para hacer fotos y videollamadas.";
+NSContactsUsageDescription = "Signal usa tu lista de contactos para encontrar personas que conoces que usen Signal. No guardamos tus contactos en nuestros servidores.";
 NSFaceIDUsageDescription = "Signal usa Face ID para activar el bloqueo de pantalla.";
-NSLocationWhenInUseUsageDescription = "Signal necesita acceso a los servicios de localización para que puedas compartir tu posición en tus chats.";
-NSMicrophoneUsageDescription = "Signal necesita acceder a tu micrófono para iniciar y atender llamadas y registrar notas de voz.";
+NSLocationWhenInUseUsageDescription = "Signal necesita acceso a tu ubicación para que puedas compartir tu ubicación actual.";
+NSMicrophoneUsageDescription = "Signal necesita acceso a tu micrófono para iniciar y atender llamadas y para grabar mensajes de voz.";
 NSPhotoLibraryAddUsageDescription = "Signal guardará fotos en tu fototeca.";
-NSPhotoLibraryUsageDescription = "Signal te permitirá seleccionar las fotos de tu fototeca a enviar.";
-NSLocalNetworkUsageDescription = "Signal usa la red local para permitir transferir tu cuenta directamente a tu teléfono nuevo. El acceso a la red local solamente se usará en el momento que decidas transferir tu cuenta a un nuevo dispositivo.";
+NSPhotoLibraryUsageDescription = "Signal te permitirá seleccionar las fotos que desees enviar.";
+NSLocalNetworkUsageDescription = "Signal usa la red local para permitir transferir tu cuenta directamente a tu teléfono nuevo. El acceso a la red local solamente se usará en el momento en que decidas transferir tu cuenta a un nuevo dispositivo.";
