--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,1 +1,1 @@
-• This update fixes a minor bug for users on iOS 16.
+• В этом обновлении исправлена небольшая ошибка, с которой сталкивались пользователи iOS 16.
